--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
+<html>
     <header>
-
-    <title>Under maintence - FusionLatte</title>
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <title>Under maintence - FusionLatte</title>
     </header>
     <body>
-        <h1>FusionLatte.</h1>
-        <h2>We are working to bring you our site. Please stayed tuned!</h2>
+        <!--Header Starts Here-->
+        <div class="head">
+            <h1>FusionLatte.</h1>
+        </div>
+        <div class="body">
+            <h2>We are working to bring you our site. Please stayed tuned!</h2>
+        </div>
         <!--Footer Line starts below-->
-        <p>© 2018 FusionLatte</p>
+        <div class="foot">
+            <p>© 2018 FusionLatte</p>
+        </div>
     </body>
     <footer></footer>
+    </html>
