--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <div class="bodyb1">
             <h2>Who let the dogs out?</h2>
             <h3>404 Error</h3>
-            <p>Would you like to go <a href="home.html">home?</a></p>
+            <p>Would you like to go <a href="index.html">home?</a></p>
         </div>
         <!--Footer Line starts below-->
         <div class="foot">
