--- a/home.html
+++ b/home.html
@@ -3,17 +3,17 @@
     <header>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <title>Woof Woof! - FusionLatte</title>
+        <title>Home - FusionLatte</title>
     </header>
     <body>
         <!--Header Starts Here-->
-        <div class="head">
+        <div class="top">
             <h1>FusionLatte</h1>
+            <h3>Coding since 2017</h3>
         </div>
-        <div class="bodyb1">
-            <h2>Who let the dogs out?</h2>
-            <h3>404 Error</h3>
-            <p>Would you like to go <a href="home.html">home?</a></p>
+        <div class="slideshow">
+            <h2>TimeAlert</h2>
+            <h3>Helping your wellbeing.</h3>
         </div>
         <!--Footer Line starts below-->
         <div class="foot">
