--- a/home.html
+++ b/home.html
@@ -2,13 +2,14 @@
 <html>
     <header>
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <title>Home - FusionLatte</title>
+        <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto+Mono|Roboto+Slab" rel="stylesheet">
+        <title>Home - ThatsZman</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </header>
     <body>
         <!--Header Starts Here-->
         <div class="top">
-            <h1>FusionLatte</h1>
+            <h1>ThatsZman</h1>
             <h3>Coding since 2017</h3>
         </div>
         <div class="slideshow">
@@ -16,8 +17,9 @@
             <h3>Helping your wellbeing.</h3>
         </div>
         <!--Footer Line starts below-->
-        <div class="foot">
-            <p>© 2018 FusionLatte</p>
+        <div class="copyright">
+            <h2>ThatsZman - Coding since 2017</h2>
+            <p>© 2018 ThatsZman</p>
         </div>
     </body>
     <footer></footer>
