--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto+Mono|Roboto+Slab" rel="stylesheet">
         <title>Under maintence - FusionLatte</title>
     </header>
     <body>
