--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@
     <header>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto+Mono|Roboto+Slab" rel="stylesheet">
-        <title>Woof Woof! - FusionLatte</title>
+        <title>Woof Woof! - ThatsZman</title>
     </header>
     <body>
         <!--Header Starts Here-->
-        <div class="head">
-            <h1>FusionLatte</h1>
+        <div class="top">
+            <h1>ThatsZman</h1>
         </div>
         <div class="bodyb1">
             <h2>Who let the dogs out?</h2>
@@ -16,7 +16,7 @@
             <p>Would you like to go <a href="home.html">home?</a></p>
         </div>
         <!--Footer Line starts below-->
-        <div class="foot">
+        <div class="copyright">
             <p>© 2018 FusionLatte</p>
         </div>
     </body>
