--- a/home.html
+++ b/home.html
@@ -13,8 +13,11 @@
             <h3>Coding since 2017</h3>
         </div>
         <div class="slideshow">
-            <h2>TimeAlert</h2>
-            <h3>Helping your wellbeing.</h3>
+            <div class="SlideText">
+                <h2>TimeAlert</h2>
+                <h3>Helping your wellbeing.</h3>
+                <button>Learn More</button>
+            </div>
         </div>
         <!--Footer Line starts below-->
         <div class="copyright">
