--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
                 <h3>Helping your wellbeing.</h3>
                 <button>Learn More</button>
             </div>
+            <img src="timealert.png" alt="TimeAlert" width="1055" height="464"
         </div>
         <!--Footer Line starts below-->
         <div class="copyright">
